--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&family=Manrope:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/favicon.png" />
-    <link rel="apple-touch-icon" href="/assets/favicon.png" />
+    <link rel="icon" type="image/png" href="/assets/favicon.png?v=2" />
+    <link rel="shortcut icon" href="/assets/favicon.png?v=2" />
+    <link rel="apple-touch-icon" href="/assets/favicon.png?v=2" />
     <link rel="stylesheet" href="/assets/styles.css" />
   </head>
   <body>
