Avoid 404 on assessment form submit

--- a/src/index.njk
+++ b/src/index.njk
@@ -139,7 +139,7 @@ breadcrumbs:
           <ul data-assessment-recommendation></ul>
           <div class="assessment-email">
             <p class="assessment-email-title">Want your score + action plan emailed?</p>
-            <form name="career-readiness" method="POST" action="/career-readiness-index/" data-netlify="true" class="assessment-email-form" data-assessment-form>
+            <form name="career-readiness" method="POST" action="/" data-netlify="true" class="assessment-email-form" data-assessment-form>
               <input type="hidden" name="form-name" value="career-readiness" />
               <input type="hidden" name="score" value="" data-assessment-score-field />
               <input type="hidden" name="bucket" value="" data-assessment-bucket-field />
