--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -23,12 +23,17 @@
         </a>
         <nav class="nav-links" aria-label="Primary">
           {% for item in site.nav %}
-            {% if item.children %}
+            {% if item.groups %}
               <div class="nav-item">
                 <a class="nav-link" href="{{ item.url }}">{{ item.label }}</a>
-                <div class="nav-dropdown">
-                  {% for child in item.children %}
-                    <a href="{{ child.url }}">{{ child.label }}</a>
+                <div class="nav-dropdown nav-dropdown-grouped">
+                  {% for group in item.groups %}
+                    <div class="nav-group">
+                      <span class="nav-group-label">{{ group.label }}</span>
+                      {% for link in group.items %}
+                        <a href="{{ link.url }}">{{ link.label }}</a>
+                      {% endfor %}
+                    </div>
                   {% endfor %}
                 </div>
               </div>
