--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -128,7 +128,7 @@ a {
   position: relative;
   display: flex;
   align-items: center;
-  padding-bottom: 12px;
+  padding-bottom: 0;
 }
 
 .nav-dropdown {
@@ -159,6 +159,12 @@ a {
   right: 0;
   top: 100%;
   height: 12px;
+}
+
+.nav-link {
+  display: inline-flex;
+  align-items: center;
+  padding-bottom: 12px;
 }
 
 .nav-dropdown a {
